# misis2024s-23-02-plishko-d-v

./: .gitignore  .gitmodules  CMakeLists.txt  codeforces.id  status.md
prj.app/: App.cpp  CMakeLists.txt  Commands.hpp  RoboCrawler.cpp  RoboCrawler.hpp
prj.app/RoboCrawler/: App.cpp  CMakeLists.txt  Commands.cpp  Commands.hpp  Input.txt  Output.txt  RoboCrawler.cpp  RoboCrawler.hpp  start.bat
prj.codeforces/: 0004a.cpp  0071a.cpp  0136b.cpp  0231a.cpp  0263a.cpp  0271a.cpp  0276a.cpp  0339b.cpp  0617a.cpp  0731a.cpp  0978a.cpp  0978b.cpp  1330a.cpp  1352a.cpp  1404a.cpp  1512b.cpp  1512c.cpp  1559a.cpp  1649a.cpp  1670b.cpp  1670b_1.cpp  1690d.cpp  1717b.cpp  1721b.cpp  1734b.cpp  1744c.cpp  1872.cpp  1872a.cpp  1873c.cpp  1873d.cpp  231a.cpp  263a.cpp  271a.cpp  276a.cpp  4a.cpp  617a.cpp  71a.cpp  731a.cpp  978a.cpp  978b.cpp  (+1 more)
prj.cw/: CMakeLists.txt
prj.lab/: CMakeLists.txt  complex.cpp
prj.lab/bitset/: CMakeLists.txt  bitset.cpp  bitset.hpp
prj.lab/complex/: CMakeLists.txt  complex.cpp  complex.hpp
prj.lab/dynarr/: CMakeLists.txt  dynarr.cpp  dynarr.hpp
prj.lab/queuearr/: CMakeLists.txt  queuearr.cpp  queuearr.hpp
prj.lab/queuelst/: CMakeLists.txt  queuelst.cpp  queuelst.hpp
prj.lab/queuelstpr/: CMakeLists.txt  queuelstpr.cpp  queuelstpr.hpp
prj.lab/rational/: CMakeLists.txt  rational.cpp  rational.hpp
prj.lab/stack/: CMakeLists.txt  stack.cpp  stack.hpp
prj.lab/stacklst/: CMakeLists.txt  stacklst.cpp  stacklst.hpp
prj.test/: CMakeLists.txt  test_complex.cpp  test_dynarr.cpp  test_queuearr.cpp  test_queuelst.cpp  test_queuelstpr.cpp  test_rational.cpp  test_stack.cpp  test_stacklst.cpp
