add_executable(0004a.cpp)
add_executable(0071a.cpp)
add_executable(0136b.cpp)
add_executable(0231a.cpp)
add_executable(0263a.cpp)
add_executable(0271a.cpp)
add_executable(0276a.cpp)
add_executable(0339b.cpp)
add_executable(0617a.cpp)
add_executable(0978a.cpp)
add_executable(0978b.cpp)
add_executable(1330a.cpp)
add_executable(1352a.cpp)
add_executable(1404a.cpp)
add_executable(1512b.cpp)
add_executable(1512c.cpp)
add_executable(1559a.cpp)
add_executable(1670b.cpp)
add_executable(1670b_1.cpp)
add_executable(1717b.cpp)
add_executable(1721b.cpp)
add_executable(1734b.cpp)
add_executable(1872a.cpp)
add_executable(1873c.cpp)
add_executable(1873d.cpp)